# sol

./: .gitattributes  Cargo.toml  baseline.json  build.rs  expression.rl  if_statement.rl  return_evalution.rl  scope.rl  small.rl  test.rl  test.sol
benches/: benchmark.rs  input.rl
src/: ast.rs  compiler.rs  error.rs  instructions.rs  lexer.rs  lib.rs  macros.rs  main.rs  parser.rs  scope.rs  stdlib.rs  types.rs  vm.rs
src/parser/: error.rs  mod.rs
src/stdlib/: mod.rs  print.rs
src/typechecker/: mod.rs  types.rs
src/vm/: mod.rs  register.rs  registers.rs  value.rs
tests/: compiler.rs  integration.rs  lexer.rs  parser.rs  vm.rs
tests/snapshots/: compiler__if_statement.snap  compiler__if_statement_boolean.snap  compiler__nested_loop.snap  compiler__objects.snap  compiler__prefix.snap  compiler__prefix_boolean.snap  compiler__small_input.snap  compiler__variable_mutation.snap  integration__fail__add_2_types.rl.snap  integration__fail__add_2_types.sol.snap  integration__fail__assign_function_to_variable.rl.snap  integration__fail__call_before_declare_function.rl.snap  integration__fail__constant_literal_only.rl.snap  integration__fail__constant_literal_only.sol.snap  integration__fail__fail_parsing.rl.snap  integration__fail__fail_parsing.sol.snap  integration__fail__if_statement_different_types.rl.snap  integration__fail__invalid_syntax.rl.snap  integration__fail__invalid_syntax.sol.snap  integration__fail__nested_function_out_of_scope.rl.snap  integration__fail__nested_function_out_of_scope.sol.snap  integration__fail__not_an_array.sol.snap  integration__fail__not_on_number.rl.snap  integration__fail__not_on_number.sol.snap  integration__fail__typing.rl.snap  integration__fail__typing.sol.snap  integration__fail__variable_mutation.rl.snap  integration__fail__variable_mutation.sol.snap  integration__fail__variable_not_found.rl.snap  integration__fail__wrong_types_array.sol.snap  (+62 more)
(+49 files in other folders)
