[package]
name = "plrs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
fxhash = "0.2.1"
thiserror = "1.0.65"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
itertools = "0.13.0"
phf = { version = "0.11.2", features = ["macros"] }
ordermap = "0.5.3"
codespan-reporting = "0.11.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_cmd = "2.0.16"
insta = "1.41.0"
rstest = "0.23.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "plrs"
bench = false

[lib]
bench = false
